--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-john:
+jane:
   name: Jane Doe
   email: jane@example.com
   password_digest: <%= User.digest("password") %>
