--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,6 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+john:
+  name: John Doe
+  email: john@example.com
+  password_digest: <%= User.digest("password") %>
+  admin: true
+
 jane:
   name: Jane Doe
   email: jane@example.com
   password_digest: <%= User.digest("password") %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
